--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -256,8 +256,7 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 
 
 ```{r Ex_l}
-visitors_with_nations %>% 
-  group_by(nation) %>%
+visitors_with_nations %>%
   count(nation)
   
 ```
@@ -272,6 +271,12 @@ _Within each of the 4 nations, what is the proportion of tourist attractions tha
 
 ```{r Ex_m}
 visitors_with_nations %>%
+  group_by(nation) %>%
+  count(admission) %>%
+  mutate(pct = 100 * n / sum(n)) %>%
+  filter(admission == "Free") %>%
+  arrange(desc(pct))
+  
   
   
 
@@ -283,7 +288,13 @@ visitors_with_nations %>%
 _Calculate the percentage change in visitor admissions from 2021 to 2022. Of the tourist attractions in Scotland, sort into increasing numerical order the types of admission charges based on the mean percentage change in visitor numbers._
 
 ```{r Ex_n}
-# Write your code here
+visitors_with_nations %>%
+  mutate(pct_change = (n_2022 - n_2021) / n_2021) %>%
+  filter(nation == "Scotland") %>%
+   group_by(admission) %>%
+  summarize(mean_pct_change = mean(pct_change, na.rm = TRUE)) %>%
+arrange(mean_pct_change)
+
 
 
 
